--- a/SweetnSaltyJsInteractive/SweetnSaltyInteractive.html
+++ b/SweetnSaltyJsInteractive/SweetnSaltyInteractive.html
@@ -5,14 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet and Salty Interactive</title>
+    <link rel="stylesheet" href="SweetnSaltyInteractive.css">
 </head>
 <body>
-    <h1 id="TitleofPage">Sweet 'n Salty Interactive</h1>
-    <br>
-    <form action="console.log" method="get">
-
-    </form>
-
 
     <script src="SweetnSaltyInteractive.js"></script>
 </body>
